tests/custom/STARIS_2022/basic/enum-spaces-error/stderr.expected
Error:
    Parser error in file: enum-spaces.essence Error is:
ValidatorError enum-spaces.essence:2:43:
  |
2 | letting numbers be new type enum {one, tw o, three}
  |                                           ^
Missing ,

